--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@
     font-family: 'Pacifico-Regular';    
     font-weight: normal;
 } 
+@font-face {
+    src: url("..//resources/fonts/Kaushan_Script/KaushanScript-Regular.ttf");
+    font-family: 'Kaushan-Script';    
+    font-weight: normal;
+}
+.capa {
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+}
+
 .transparent{    
     background-color: rgba(0,0,0,0) !important;}
 .primeiro_bg{
@@ -18,6 +29,7 @@
         -moz-background-size: cover;
         background-size: cover;
         -o-background-size: cover;
+        
     }
     .terceiro_bg{
         background: url("..//resources/img/bg_3.jpg") no-repeat center center fixed;
@@ -27,5 +39,46 @@
         -o-background-size: cover;}
 
 .logo-font{
+    color: #fff !important;
     font-family: 'Pacifico-Regular';
+    font-size: 2em !important;
+    font-weight: bolder;
+    font-style: italic;
+    text-shadow: 1px 1px red;
+}
+.h_font{
+    font-family: 'Kaushan-Script';
+}
+.h_font h1{
+    font-size: 6em;
+}
+.h_font h2{
+    font-size: 3em;
+}
+ul li a{
+    font-weight: bold;
+}
+fl{
+    font-size: 1.2em !important;
+    
+}
+.div-em-colunas {
+    -webkit-column-count:2; /* Chrome, Safari, Opera */
+    -moz-column-count:2;    /* Firefox */
+    column-count:2;         /* padrão */
+    font-weight: 250 !important;
+}
+footer .logo-font{
+    font-size: 1em !important;
+}
+a{
+    text-decoration: none !important;
+}
+.icon-pers{
+    text-shadow: 1px 1px red;
+    font-size: 3em;
+}
+.icon-pers a{
+    color: #fff;
+    text-decoration: none !important;
 }
